crates/apollo-compiler/test_data/diagnostics/0007_operation_with_undefined_variables.txt
Error: variable `undefinedVariable` is not defined
   ╭─[0007_operation_with_undefined_variables.graphql:2:15]
   │
 2 │   topProducts(first: $undefinedVariable) {
   │                      ─────────┬────────  
   │                               ╰────────── not found in this scope
───╯

